--- a/src/customize-bootstrap.scss
+++ b/src/customize-bootstrap.scss
@@ -11,5 +11,7 @@ $theme-colors: (
   "Salida": #e3a5b0,
   "Delivery":#28a745,
   "Deportes": #fd7e14,
-  "Viajes": #84329b
+  "Viajes": #84329b,
+
+  "grey-300" : #dddfeb
 );
