--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,55 +1,85 @@
 <app-dashboard>
 
-    <div class="d-flex align-items-center p-3 my-3 text-white bg-waste rounded shadow">        
+    <div class="d-flex align-items-center p-3 my-3 text-white bg-waste rounded shadow" *ngIf="desktop">        
         <h3 class="my-0 fw-normal text-white text-center">Home</h3>
     </div>
 
-    <div class="container mt-3" style="background: linear-gradient(45deg, #84329b, #1d53b7);">
-        <div id="bootstrapCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Slide Indicators -->
-            <ul class="carousel-indicators">
-            <li data-target="#bootstrapCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#bootstrapCarousel" data-slide-to="1"></li>
-            <li data-target="#bootstrapCarousel" data-slide-to="2"></li>
-            </ul>
-
-            <!-- The slides to show -->
-            <div class="carousel-inner">
-                
-                <div class="carousel-item active">
-                    
-                    <div class="carousel-caption d-none d-md-block">
-                        <img class="d-block w-100" src="/assets/png/placeholder.png"  class="mb-1" data-holder-rendered="true">
-                        <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block">Hola</button>
-                        <h5>Second slide label</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <div class="row mb-3" >
+        <div class="col-12 col-sm-4 col-xxl d-flex">
+          <div class="card border-left-green flex-fill shadow">
+            <div class="card-body py-4">
+              <app-cargando [isLoaded]="pasivo"></app-cargando>
+              <div class="media" *ngIf="pasivo">
+                <div class="media-body">
+                    <div class="row no-gutters align-items-center info-card">
+                        <div class="text-xs text-green text-uppercase mb-1">
+                            Ingreso Neto
+                        </div>
+                        <div class="h2 mb-0 font-weight-bold text-muted long-text">{{totalIngresos | currency}}</div>
+                        <p class="mb-2 text-muted">Ingreso mensunal Neto del mes de {{mes}}</p>                                       
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img style="opacity: 0;" class="d-block w-100"  data-holder-rendered="true">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [800x400]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_17770ce91ff%20text%20%7B%20fill%3A%23444%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_17770ce91ff%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23666%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22247.2916717529297%22%20y%3D%22217.7%22%3ESecond%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
+              </div>
             </div>
-
-            <!--  Controls (Left and right) -->
-            <a class="carousel-control-prev" href="#bootstrapCarousel" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#bootstrapCarousel" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-            </a>
+          </div>
         </div>
-    </div>
+        <div class="col-12 col-sm-4 col-xxl d-flex">
+            <div class="card border-left-waste flex-fill shadow"
+              [ngClass]="{
+              'border-left-danger': totalGastado > totalIngresos,
+              'border-left-waste': totalGastado <= totalIngresos}">
+              <div class="card-body py-4">
+                <app-cargando [isLoaded]="pasivo"></app-cargando>
+                <div class="media" *ngIf="pasivo">
+                  <div class="media-body">
+                      <div class="row no-gutters align-items-center info-card">
+                          <div class="text-xs text-uppercase mb-1"
+                            [ngClass]="{
+                            'text-danger': totalGastado > totalIngresos,
+                            'text-waste': totalGastado <= totalIngresos}">
+                            Balance
+                          </div>
+                          <div class="h2 mb-0 font-weight-bold long-text"
+                            [ngClass]="{
+                            'text-danger': totalGastado > totalIngresos,
+                            'text-muted': totalGastado <= totalIngresos}">
+                            {{totalIngresos-totalGastado | currency}}
+                          </div>  
+                          <p class="mb-2 text-muted" *ngIf="totalGastado > totalIngresos">
+                            <i class="fas fa-exclamation-triangle text-danger"></i>  
+                            Tus gastos han superado tu presupuesto
+                          </p> 
+                          <div *ngIf="totalGastado <= totalIngresos">
+                            <p class="mb-2 text-muted">Presupuesto restante del mes de {{mes}}</p> 
+                            <div class="progress mt-2">
+                                <div class="progress-bar bg-waste" role="progressbar" style="width: {{(1-totalGastado/totalIngresos)*100}}%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{1-totalGastado/totalIngresos | percent}}</div>
+                            </div>
+                          </div>                                                           
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-4 col-xxl d-flex">
+            <div class="card border-left-danger flex-fill shadow">
+              <div class="card-body py-4">
+                <app-cargando [isLoaded]="pasivo"></app-cargando>
+                <div class="media" *ngIf="pasivo">
+                  <div class="media-body">
+                      <div class="row no-gutters align-items-center info-card">
+                          <div class="text-xs text-danger text-uppercase mb-1">
+                              Gastos de {{mes}}
+                          </div>
+                          <div class="h2 mb-0 font-weight-bold text-muted long-text">{{totalGastado | currency}}</div>
+                          <p class="mb-2 text-muted">Gastos variables y fijos del mes de {{mes}}</p>                                       
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
         
 </app-dashboard>
 
