Calendario en Home
-uso de Full calender para mostrar la distribucion de los gastos a lo largo del mes

--- a/src/app/components/layout/sidebar/sidebar.component.scss
+++ b/src/app/components/layout/sidebar/sidebar.component.scss
@@ -36,6 +36,10 @@ p {
   text-decoration: none;
 }
 
-
+.disable-links {
+  pointer-events: none;
+  text-decoration:line-through;
+  color: orangered;
+}
 
 
