--- a/src/customize-bootstrap.scss
+++ b/src/customize-bootstrap.scss
@@ -4,6 +4,7 @@ $theme-colors: (
   "waste": $violeta,
   "green": #28a745,
   "success": $violeta,
+  "primary": $violeta,
 
   "Supermercado": #3498db,
   "Shoping": #ffc107,
