--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
 
             <ul class="nav ml-2 collapse" id="cargar">
                 <li routerLinkActive="active">
-                    <a class="nav-custom" role="button">                                
+                    <a class="nav-custom disable-links" role="button">                                
                         <p class="font-weight-light">Gastos Fijos</p>
                     </a>
                 </li>  
@@ -29,7 +29,7 @@
                 </li>
 
                 <li routerLinkActive="active">
-                    <a class="nav-custom" role="button">                                
+                    <a class="nav-custom disable-links" role="button">                                
                         <p class="font-weight-light">Errores/Omisiones</p>
                     </a>
                 </li>
@@ -40,7 +40,7 @@
                 <p class="font-weight-light"><i class="fas fa-list"></i> Gastos variables</p>
             </a>
 
-            <a class="nav-custom" role="button"
+            <a class="nav-custom disable-links" role="button"
             [routerLink]="['/gastos/variables']">                                
                 <p class="font-weight-light"><i class="fas fa-list"></i> Gastos Fijos</p>
             </a>
@@ -48,11 +48,11 @@
 
         <p class="text-white mt-2">Ingresos</p>
         <li routerLinkActive="active" class="nav-item">
-            <a class="nav-custom" role="button">                                
+            <a class="nav-custom disable-links" role="button">                                
                 <p class="font-weight-light"><i class="fas fa-file-upload"></i> Cargar Ingreso</p>
             </a>
 
-            <a class="nav-custom" role="button">                                
+            <a class="nav-custom disable-links" role="button">                                
                 <p class="font-weight-light"><i class="fas fa-list"></i> Ingresos</p>
             </a>
         </li>
