--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -80,6 +80,12 @@
             </div>
           </div>
       </div>
+
+      <div class="card shadow mt-2">
+        <div class="card-body">
+          <app-calender [pasivo]="pasivo"></app-calender>
+        </div>
+      </div>
         
 </app-dashboard>
 
