--- a/src/app/components/views/gastos-charge/gastos.component.html
+++ b/src/app/components/views/gastos-charge/gastos.component.html
@@ -3,8 +3,8 @@
     (egresoEmiter)="onEgreso($event)"
     (categoriaEmiter)="onCategoria($event)"
     (cargarItemsEmiter)="onCargarItems($event)"
-    [categorias]="categorias"
-    [formasDePago]="formasDePago">
+    [categoriasOb]="categorias"
+    [formasDePagoOb]="formasDePago">
   </app-gasto-form>
 
   <app-gasto-add-items
