--- a/src/app/components/views/home/home.component.scss
+++ b/src/app/components/views/home/home.component.scss
@@ -20,7 +20,7 @@
 }
 
 .border-left-green {
-  border-left: 0.75rem solid #1cc88a !important;
+  border-left: 0.75rem solid #28a745  !important;
 }
 
 .border-left-warning {
