--- a/src/app/components/views/ingresos-charge/ingresos-charge.component.html
+++ b/src/app/components/views/ingresos-charge/ingresos-charge.component.html
@@ -1,1 +1,78 @@
-<p>ingresos-charge works!</p>
+<app-dashboard>
+
+    <div class="card text-left shadow">
+        <div class="card-header text-center bg-waste">
+          <h3 class="my-0 fw-normal text-white"
+            [ngStyle]="{'font-size': !desktop ? '1rem' : ''}">
+            <i class="text-white fas fa-chevron-circle-up"></i> Registrar Nuevo Ingreso
+          </h3>
+        </div>
+        <div class="card-body">
+      
+            <app-cargando [isLoaded]="ingresos.length"></app-cargando>
+    
+          <form *ngIf="ingresos.length">
+            <div class="row mb-3" >
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="sel1">Categoria</label>
+                  <select class="custom-select" 
+                    #tipoIngresoSelect 
+                    required
+                    (change)='tipoIngresoChange(tipoIngresoSelect.value)'>
+                    <option hidden disabled selected value>-</option>
+                    <option *ngFor="let ti of ingresos" value="{{ti.nombre}}">{{ti.nombre}}</option>
+                  </select>
+                </div> 
+              </div>
+              <div class="col-sm-6">
+                <label for="Monto" class="form-label">Monto</label>
+                <input type="number" class="form-control" placeholder="Monto" min="1" required                                   
+                  [(ngModel)]="monto" 
+                  [ngModelOptions]="{standalone: true}"> 
+              </div>                               
+            </div>
+
+            <div class="row mb-3" >
+              <div class="col-sm-6">
+                <label for="Concpeto" class="form-label">Concepto (opcional)</label>
+                <input type="text" class="form-control" placeholder="Concepto" required                                   
+                  [(ngModel)]="concepto" 
+                  [ngModelOptions]="{standalone: true}"> 
+              </div>  
+              <div class="col-sm-6">            
+                <label for="Concpeto" class="form-label">Fecha</label>
+                  <div class='input-group date' id='datetimepicker1'>
+                      <input type='date' class="form-control" 
+                        [(ngModel)]="currentDateString"
+                        [ngModelOptions]="{standalone: true}"/>
+                  </div>
+              </div> 
+            </div>
+                            
+            <!-- <p *ngIf="categoriaFromsFeedback" class="text-danger"><i class="fas fa-exclamation-triangle"></i> {{categoriaFromsFeedback}}</p>-->
+      
+            <div class="text-center">
+              <button type="button" class="mt-2 btn btn-waste" style="width: 20%;" 
+                (click)="generateIngreso()" 
+                data-toggle="modal" 
+                data-target="#Modal"
+                [disabled]="!monto || !tipoIngreso || !currentDateString"                
+                [ngStyle]="desktop ? {'width':  '20%','margin-rigth' : '15px' } : {'width':  '100%'}">
+                <i class="fas fa-save"></i> Registrar Ingreso
+              </button> 
+            </div>    
+
+          </form>
+
+          <app-notificacion-modal
+            [title]="'Operacion Completada'"
+            [subtitle]="'El ingreso se han registrado correctamente en la Base de datos'"
+            [descp]="'Monto de '+monto"
+            [url]="'ingresos'">
+          </app-notificacion-modal>
+
+        </div>
+    </div>
+</app-dashboard>
+
