--- a/src/app/components/views/ingresos/ingresos.component.html
+++ b/src/app/components/views/ingresos/ingresos.component.html
@@ -9,27 +9,30 @@
 
         <app-cargando [isLoaded]="activo"></app-cargando>
 
-        <table class="table table-hover table-sm" *ngIf="activo">
-            <thead>
-                <tr>
-                    <th>Fecha</th>
-                    <th>Tipo ingreso</th>
-                    <th>Concepto</th>
-                    <th>Monto</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let i of activo.ingresos">
-                    <td scope="row">
-                        {{i.fecha.toMillis()  | date: 'dd/MM/yyyy'}}
-                        <span class="badge badge-waste" *ngIf="(todayDate.getTime() - i.createDate?.toDate().getTime())/1000/60/60 < 2">NEW</span>
-                    </td>
-                    <td>{{i.tipoIngreso}}</td>
-                    <td>{{i.concepto}}</td>
-                    <td>{{i.monto | currency}}</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-hover table-sm" *ngIf="activo">            
+                    <thead>
+                        <tr>
+                            <th>Fecha</th>
+                            <th>Tipo ingreso</th>
+                            <th *ngIf="desktop">Concepto</th>
+                            <th>Monto</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let i of activo.ingresos">
+                            <td scope="row">
+                                <span *ngIf="!desktop">{{i.fecha.toMillis()  | date: 'dd/MM'}}</span>  
+                                <span *ngIf="desktop">{{i.fecha.toMillis()  | date: 'dd/MM/yyyy'}}</span>
+                                <span class="badge badge-waste ml-2" *ngIf="(todayDate.getTime() - i.createDate?.toDate().getTime())/1000/60/60 < 2">NEW</span>
+                            </td>
+                            <td>{{i.tipoIngreso}}</td>
+                            <td *ngIf="desktop">{{i.concepto}}</td>
+                            <td>{{i.monto | currency}}</td>
+                        </tr>
+                    </tbody>            
+            </table>
+        </div>
       </div>
     </div>
 
