--- a/src/app/components/views/gastos-charge/gasto-add-items/gasto-add-items.component.html
+++ b/src/app/components/views/gastos-charge/gasto-add-items/gasto-add-items.component.html
@@ -70,6 +70,7 @@
       </div>    
       
       <app-notificacion-modal
+        #modal
         [title]="'Operacion Completada'"
         [subtitle]="'Los Gastos se han registrado correctamente en la Base de datos'"
         [descp]="'Total de '+total"
