--- a/src/app/components/views/home/home.component.scss
+++ b/src/app/components/views/home/home.component.scss
@@ -34,3 +34,15 @@
 .border-left-waste {
   border-left: 0.75rem solid #84329b !important;
 }
+
+.mobile .h2{
+  font-size: 1.2rem;
+}
+
+.mobile .text-xs{
+  font-size: 1rem;
+}
+
+.mobile p{
+  font-size: .9rem;
+}
