--- a/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
+++ b/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
@@ -102,6 +102,7 @@
         <div class="text-center" *ngIf="fastCharge">
           <button type="button" class="mt-2 btn btn-waste"
             (click)="saveGastos()"
+            [disabled]="total == 0 || total == null"
             data-toggle="modal" 
             data-target="#Modal"
             [ngStyle]="desktop ? {'width':  '20%','margin-left' : '15px' } : {'width':  '100%'}"><i class="fas fa-save"></i> Registrar Gasto
