--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -16,7 +16,8 @@
 
             <ul class="nav ml-2 collapse" id="cargar">
                 <li routerLinkActive="active">
-                    <a class="nav-custom disable-links" role="button">                                
+                    <a class="nav-custom" role="button"
+                        [routerLink]="['/gastos/fijos/cargar']">                                
                         <p class="font-weight-light">Gastos Fijos</p>
                     </a>
                 </li>  
@@ -40,8 +41,8 @@
                 <p class="font-weight-light"><i class="fas fa-list"></i> Gastos variables</p>
             </a>
 
-            <a class="nav-custom disable-links" role="button"
-                [routerLink]="['/gastos/variables']">                                
+            <a class="nav-custom" role="button"
+                [routerLink]="['/gastos/fijos']">                                
                 <p class="font-weight-light"><i class="fas fa-list"></i> Gastos Fijos</p>
             </a>
         </li>         
