--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -9,7 +9,20 @@
           [ngClass]="{'mobile': !desktop}">
           <div class="card border-left-green flex-fill shadow">
             <div class="card-body py-4">
-              <app-cargando [isLoaded]="activo"></app-cargando>
+              <app-cargando [isLoaded]="activo || activoUndefined"></app-cargando>
+
+              <div class="container mt-2" *ngIf="activoUndefined">                
+                <div class="align-self-center mx-auto text-center">
+                  <div class="text-xs text-muted text-uppercase"> No tienes Ingresos</div>
+                  <button type="button" class="btn btn-green" routerLink="/ingresos/cargar" 
+                    [ngClass]="{
+                      'btn-xs': !desktop,
+                      'btn-lg': desktop}">
+                    <i class="fas fa-plus-circle"></i> Cargar Ingreso
+                  </button>
+                </div>                
+              </div>
+              
               <div class="media" *ngIf="activo">
                 <div class="media-body">
                     <div class="row no-gutters align-items-center info-card">
@@ -31,8 +44,16 @@
               'border-left-danger': totalGastado > totalIngresos,
               'border-left-waste': totalGastado <= totalIngresos}">
               <div class="card-body py-4">
-                <app-cargando [isLoaded]="pasivo"></app-cargando>
-                <div class="media" *ngIf="pasivo">
+                <app-cargando [isLoaded]="(activoUndefined || pasivoUndefined) || (activo && pasivo)"></app-cargando>
+
+                <div *ngIf="activoUndefined || pasivoUndefined">                
+                  <div class="col text-center align-self-center">
+                    <div class="text-xs text-danger text-uppercase"><i class="fas fa-exclamation-circle"></i> Error Balance</div>   
+                    <p class="text-muted"> Pare obtener el balance se necesitan tener cargado los ingresos y egresos del corriente mes.</p>                 
+                  </div>                
+                </div>
+
+                <div class="media" *ngIf="(activo && pasivo) &&  (!activoUndefined && !pasivoUndefined)">
                   <div class="media-body">
                       <div class="row no-gutters align-items-center info-card">
                           <div class="text-xs text-uppercase mb-1"
@@ -67,8 +88,22 @@
             [ngClass]="{'mobile': !desktop}">
             <div class="card border-left-danger flex-fill shadow">
               <div class="card-body py-4">
-                <app-cargando [isLoaded]="pasivo"></app-cargando>
-                <div class="media" *ngIf="pasivo">
+
+                <app-cargando [isLoaded]="pasivo || pasivoUndefined"></app-cargando>
+
+                <div class="container mt-2" *ngIf="pasivoUndefined">                
+                  <div class="align-self-center mx-auto text-center">
+                    <div class="text-xs text-muted text-uppercase"> No tienes Gastos</div>
+                    <button type="button" class="btn btn-danger" routerLink="/gastos/variables/cargar" 
+                      [ngClass]="{
+                        'btn-xs': !desktop,
+                        'btn-lg': desktop}">
+                      <i class="fas fa-plus-circle"></i> Cargar Gasto
+                    </button>
+                  </div>                
+                </div>
+
+                <div class="media" *ngIf="pasivo && !pasivoUndefined">
                   <div class="media-body">
                       <div class="row no-gutters align-items-center info-card">
                           <div class="text-xs text-danger text-uppercase mb-1">
@@ -84,7 +119,7 @@
           </div>
       </div>
 
-      <div class="card shadow mt-2">
+      <div class="card shadow mt-2" *ngIf="!pasivoUndefined && !activoUndefined">
         <div class="card-body">
           <app-calender 
             [pasivo]="pasivo"
