--- a/src/app/components/layout/header/header.component.scss
+++ b/src/app/components/layout/header/header.component.scss
@@ -22,3 +22,14 @@
   color: darkslategray;
   text-decoration: none;
 }
+
+.btn-toggle {
+  margin-left: 200px;
+  transition: margin 0.4s;
+}
+
+.btn {
+  transition: margin 0.4s;
+}
+
+
