--- a/src/app/components/shared/modals/notificacion-modal/notificacion-modal.component.html
+++ b/src/app/components/shared/modals/notificacion-modal/notificacion-modal.component.html
@@ -4,6 +4,9 @@
         
         <div class="modal-body text-center">     
           
+          <!-- <app-cargando [isLoaded]="loading"></app-cargando> -->
+
+          <div>
             <h1 class="modal-icon text-green"><i class="fas fa-check-circle"></i></h1>
             <div>
                 <h3 class="text-secondary">Genial!</h3>
@@ -12,6 +15,8 @@
             </div>               
             
             <button type="button" class="btn btn-green w-50 mt-3" data-dismiss="modal" aria-label="Close" (click)="onClick()">Entendido</button>
+          </div>
+          
         </div>
       </div>
     </div>
